# iSAMS-OASync

./: CrossReferenceMapping - Nationality - Country.csv  LICENSE  OA (Cologne International School).xlsx  README.md  grade_year_mapping (Cologne International School).csv  iSAMS (Cologne International School).xlsx  pyproject.toml
sync/: iSAMS-OA.py
