[tool.poetry]
name = "sync"
version = "1.2.0"
description = ""
authors = ["Christopher Andrew <christopher.andrew@fariaedu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
openpyxl = "^3.1.2"
datetime = "^5.4"
click = "^8.1.7"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "sync.iSAMS-OA:isams_oa_sync"